# MPNA-SVD

./: .gitignore  CMakeLists.txt  README.md
include/: kernels.h  utils.h
src/: kernels.c  main.c  par.c  seq.c  svd.c  utils.c
